--- a/ex04/menu.html
+++ b/ex04/menu.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" type="text/css" media="screen" href="menu.css" />
 </head>
 <body>
-    <nav class="nav">
+    <nav class="nav nav-horisontal">
         <div class="nav-item">
             <a href="~/">Home</a>
         </div>
         <div class="nav-item nav-dropdown">
-            
+            <a href="~/">Dropdown head</a>
+            <div class="nav nav-virtical">
+                <a href="~/">Dropdown child 1</a>
+                <a href="~/">Dropdown child 2</a>
+                <a href="~/">Dropdown child 3</a>
+                <a href="~/">Dropdown child 4</a>
+            </div>
         </div>
     </nav>
 </body>
