Going to submit

--- a/ex04/menu.html
+++ b/ex04/menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -13,12 +13,21 @@
             <a href="~/">Home</a>
         </div>
         <div class="nav-item nav-dropdown">
-            <a href="~/">Dropdown head</a>
+            <a class="nav-item" href="~/">Dropdown head</a>
             <div class="nav nav-virtical">
-                <a href="~/">Dropdown child 1</a>
-                <a href="~/">Dropdown child 2</a>
-                <a href="~/">Dropdown child 3</a>
-                <a href="~/">Dropdown child 4</a>
+                <a class="nav-item" href="~/">Dropdown child 1</a>
+                <a class="nav-item" href="~/">Dropdown child 2</a>
+                <a class="nav-item" href="~/">Dropdown child 3</a>
+                <a class="nav-item" href="~/">Dropdown child 4</a>
+            </div>
+        </div>
+        <div class="nav-item nav-dropdown">
+            <a class="nav-item" href="~/">Dropdown head</a>
+            <div class="nav nav-virtical">
+                <a class="nav-item" href="~/">Dropdown child 1</a>
+                <a class="nav-item" href="~/">Dropdown child 2</a>
+                <a class="nav-item" href="~/">Dropdown child 3</a>
+                <a class="nav-item" href="~/">Dropdown child 4</a>
             </div>
         </div>
     </nav>
