--- a/ex04/menu.html
+++ b/ex04/menu.html
@@ -13,7 +13,7 @@
             <a href="~/">Home</a>
         </div>
         <div class="nav-item nav-dropdown">
-            <a class="nav-item" href="~/">Dropdown head</a>
+            <a class="" href="~/">Dropdown head</a>
             <div class="nav nav-virtical">
                 <a class="nav-item" href="~/">Dropdown child 1</a>
                 <a class="nav-item" href="~/">Dropdown child 2</a>
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="nav-item nav-dropdown">
-            <a class="nav-item" href="~/">Dropdown head</a>
+            <a class="" href="~/">Dropdown head</a>
             <div class="nav nav-virtical">
                 <a class="nav-item" href="~/">Dropdown child 1</a>
                 <a class="nav-item" href="~/">Dropdown child 2</a>
